# file_server

./: .gitignore  pyproject.toml
file_server/: asgi.py  settings.py  urls.py  wsgi.py
files/: forms.py  models.py  serializers.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_customuser.py  0003_delete_customuser.py  0004_customuser.py  0005_delete_customuser.py  0006_customuser.py
files/templates/files/: file_list.html  upload_file.html
files/templates/registration/: login.html
